config-root/namespaces/jx-observability/grafana/grafana-deploy.yaml
# Source: grafana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: jx-observability
  labels:
    helm.sh/chart: grafana-6.17.4
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/version: "8.2.2"
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'grafana'
    wave.pusher.com/update-on-config-change: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana
      annotations:
        checksum/config: 637330d0a7d90a825b08480a1788e1ed49fb943632b2a1a4e9382d66505739c7
        checksum/dashboards-json-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/sc-dashboard-provider-config: ff69aec5a77cbc1cd174d2211e90e53f5d0958b41c8bb5fa41209644e66275b1
        checksum/secret: a1ea32314010782b50bd452fc41b99e33b41648d43ecdb81a784bdcb9c83f6b6
    spec:
      serviceAccountName: grafana
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsUser: 472
      enableServiceLinks: true
      containers:
      - name: grafana-sc-dashboard
        image: "quay.io/kiwigrid/k8s-sidecar:1.14.2"
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - name: sc-dashboard-volume
          mountPath: "/tmp/dashboards"
      - name: grafana
        image: "grafana/grafana:8.2.2"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: "/etc/grafana/grafana.ini"
          subPath: grafana.ini
        - name: storage
          mountPath: "/var/lib/grafana"
        - name: config
          mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
          subPath: "datasources.yaml"
        - name: config
          mountPath: "/etc/grafana/provisioning/notifiers/notifiers.yaml"
          subPath: "notifiers.yaml"
        - name: sc-dashboard-volume
          mountPath: "/tmp/dashboards"
        - name: sc-dashboard-provider
          mountPath: "/etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml"
          subPath: provider.yaml
        - name: sc-datasources-volume
          mountPath: "/etc/grafana/provisioning/datasources"
        - name: sc-notifiers-volume
          mountPath: "/etc/grafana/provisioning/notifiers"
        ports:
        - name: service
          containerPort: 80
          protocol: TCP
        - name: grafana
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
        resources: {}
      volumes:
      - name: config
        configMap:
          name: grafana
      - name: storage
        persistentVolumeClaim:
          claimName: grafana
      - name: sc-dashboard-volume
        emptyDir: {}
      - name: sc-dashboard-provider
        configMap:
          name: grafana-config-dashboards
      - name: sc-datasources-volume
        emptyDir: {}
      - name: sc-notifiers-volume
        emptyDir: {}
